--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -12,7 +12,7 @@
                 </div>
                 <div class="panel-body">
                     <div id="{{datacenter.aggregation_name}}-live-chart" style="height:300px;cursor:crosshair">
-                        <h3 id="graphLoader" align="center"><img src="../images/graph-loader.gif" height="200px" style="margin-top: 5%" ></h3>
+                        <h3 id="graphLoader" align="center"><img src="graph-loader.gif" height="200px" style="margin-top: 5%" ></h3>
                         <live-Linechart graphdiv="{{datacenter.aggregation_name}}-live-chart"
                                         graphid="{{datacenter.id}}" vlanid="{{datacenter.vlan_id}}"
                                         graphlegend="{{datacenter.aggregation_name}}-legend"></live-Linechart>
